--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.10",
     "nodemon": "^3.0.1",
     "open": "^9.1.0",
+    "otp-generator": "^4.0.1",
     "swagger-ui-express": "^5.0.0"
   }
 }
