--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^3.0.1",
     "open": "^9.1.0",
     "otp-generator": "^4.0.1",
+    "stripe": "^16.5.0",
     "swagger-ui-express": "^5.0.0"
   }
 }
